--- a/index.html
+++ b/index.html
@@ -2,10 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="" type="text/css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <title>Geekwise-flexbox-nesting</title>
 </head>
 <body>
-    <h1>geekwise flexbox nesting</h1>
+    <section class='column'>
+        <h1>top</h1>
+        <div class='dice'>
+            <span class='dot, left, top' dot='one'></span>
+        </div>
+        <div class='dice'>
+            <span class='dot, center, top' dot='two'></span>
+        </div>
+        <div class='dice'>
+            <span class='dot, right, top' dot='three'></span>
+        </div>
+    </section>
+    
+    <section class='column'>
+        <h1>middle</h1>
+        <div class='dice'>
+            <span class='dot, left, middle' dot='four'></span>
+        </div>
+        <div class='dice'>
+            <span class='dot, center, middle' dot='five'></span>
+        </div>
+        <div class='dice'>
+            <span class='dot, right, middle' dot='six'></span>
+        </div>
+    </section>
+    
+    <section class='column'>
+        <h1>bottom</h1>
+        <div class='dice'>
+            <span class='dot, left, bottom' dot='seven'></span>
+        </div>
+        <div class='dice'>
+            <span class='dot, center, bottom' dot='eight'></span>
+        </div>
+        <div class='dice'>
+            <span class='dot, right, bottom' dot='nine'></span>
+        </div>
+    </section>
 </body>
 </html>
